# customer-support-ai-agent

./: .env.example  .gitignore  README.md  agent.py  auth.py  db.py  docker-compose.yml  learnings.md  pyproject.toml  server.py  tools.py  tracing.py  vector_store.py
datasource/: FAQ.json  inventory.json
evals/: dataset.py  run_evals.py
tests/: conftest.py  test_agent_llm.py  test_app.py  test_auth.py  test_tools.py  test_tracing.py
