[project]
name = "customer-support-agent"
version = "0.1.0"
description = "Customer Support agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "load-dotenv>=0.1.0",
    "pgvector>=0.4.2",
    "psycopg>=3.3.4",
    "psycopg-pool>=3.3.1",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "torchvision>=0.27.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: makes real LLM calls (run with --run-slow)",
]
